--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>Fetehadin Negash - Personal Portfolio</title>
 </head>
 <body>
@@ -24,7 +24,6 @@
             <p>Hello! I'm Fetehadin, a dedicated and curious web developer with a background in backend development and a growing passion for frontend technologies. After graduating from the ALX backend program and learning programming fundamentals with Udacity, I’ve continued expanding my skills through hands-on projects and real-world experience. I believe in building secure, scalable, and user-friendly applications that make a difference.</p>
         </section>
         <section id="projects">
-            <section id="projects">
                 <h2>Projects</h2>
                 <article class="project">
                     <h3>Library Management System API</h3>
