--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -53,7 +53,7 @@
             </ul>
             <p>Outside of coding, I love learning about cybersecurity, sharing my journey on Telegram, and inspiring others in my community to grow in tech.</p>
         </section>
-        <section>
+        <section id="contact">
             <h2>Contact</h2>
             <p><a href="mailto:fetehadinnegash@gmail.com" target="_blank">email</a> | <a href="https://www.linkedin.com/in/fetehadin/" target="_blank">LinkedIn</a> | <a href="https://github.com/fetehadin" target="_blank">GitHub</a></p>
         </section>
